# WWWater-Graphics

./: .gitignore  README.md
HW01/: draw_obj.py  report.md  util.py
Taichi-learning/: ball_bounce.py  fractal.py
data_obj/white_oak/: white_oak.mtl
try-ray-tracing/: CMakeLists.txt
try-ray-tracing/one-weekend/: CMakeLists.txt  main.cpp  vec3.h
